--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -1,11 +1,18 @@
-﻿@model ASPCoreWebApiLogin.Student
+﻿@model ASPCoreWebApiLogin.ViewModels.StudentDisplayViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
 @Html.AntiForgeryToken()
 <head>
-   
+    <script type="text/javascript">
+
+    $(function() {
+        $('#departmentList').multiselect({
+            includeSelectAllOption: true
+        });
+    });
+    </script>
 </head>
 
 
@@ -34,23 +41,54 @@
                 </div>
                 <div class="form-group" style="width: 120px; background-color: rgba(0,0,255,.1)">
 
-                    @*@Html.DropDownList("departmentList", ViewBag.ListofDepartments as SelectList, "Please select Department")*@
-                    @Html.DropDownListFor(model => Model.DptId, ViewBag.ListofDepartments as SelectList, "Please select Department",new  { @class = "form-control" })
+                    <label asp-for="Department" class="control-label"></label>
+
+                    <div>
+                        @Html.DropDownListFor(m => m.ListOfDepartment, new SelectList(ViewBag.ListofDepartments, "Value", "Text"), "-----Select---- ")
+                        <!--<select id="departmentList"
+            multiple="multiple"
+            required name="DepartmentName">-->
+                        @*@foreach (var item in ViewBag.ListofDepartments)
+        {
+            <option value="@item.Value"> @item.Text </option>
 
 
-                    @*<label asp-for="Department" class="control-label"></label>
+        }*@
 
-        <select class="form-control" asp-for="Department">
-            <option>--Select--</option>
-            <option value="ECE">ECE</option>
-            <option value="EEE">EEE</option>
-            <option value="Civil">Civil</option>
-        </select>*@
-                    @*<span asp-validation-for="Department" class="text-danger"></span>
-        <label asp-for=" Department" >Departments</label>
-         <select asp-for=" Department" class="form-control ddl"
-                 asp-items="@(new SelectList(ViewBag.ListofDepartments,"Value","Text"))"></select>*@
-                    
+                        @* @Html.DropDownListFor(M => M.DptId,  ViewBag.ListofDepartments as SelectList , "Value", "Text"))*@
+
+                        <!--</select>-->
+                    </div>
+
+
+                    @*     @Html.DropDownList("Dptld", ViewBag.ListofDepartments as SelectList, "Please select Department")*@
+
+
+
+
+                    @* <select class="form-control" asp-for="DptId">
+            @foreach (var items in ViewBag.ListofDepartments)
+            {
+                <option value="@items.Value">@items.Text</option>
+
+            }
+        </select>
+                        @Html.DropDownListFor(model => Model.Department, ViewBag.ListofDepartments as SelectList, "Please select Department", new { @class = "form-control" })
+
+
+                    <option value="ECE"></option>
+                    <option value="EEE"></option>
+                    <option value="Civil"></option>
+                    <span asp-validation-for="Department" class="text-danger"></span>
+                    <label asp-for=" Department"></label>
+
+
+                    <select asp-for=" Department" class="form-control ddl"
+                            asp - items="@foreach (var items in ViewBag.ListofDepartments) {
+        @(new SelectList(items," Value","Text"));
+                            }"
+                            asp - items="@(new SelectList(ViewBag.ListofDepartments," Value","Text"))"></select>*@
+
                 </div>
                     <div class="col-md-10">
                         Male
@@ -66,13 +104,14 @@
                     <div style="color:green;">@ViewBag.message</div>
                     <div style="color:red;">@ViewBag.message1</div>
                     <div>
-                        <a asp-action="Index">Back to List</a>
+                  
+                        <p>
+                            @Html.ActionLink("Back to List", "Index") 
+
+                        </p>
                     </div>
                 </div>
-            </div>
-
-    <div>
-        <a asp-action="Index">Back to List</a>
+         
     </div>
 </div>
 @section Scripts {
