--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -5,8 +5,9 @@
 }
 @Html.AntiForgeryToken()
 <head>
+    <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script type="text/javascript">
-
     $(function() {
         $('#departmentList').multiselect({
             includeSelectAllOption: true
@@ -27,7 +28,7 @@
             {
                 <h3 class="text-center text-info">Student Create</h3>
                 <div class="form-group">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div asp-validation-summary="true" class="text-danger"></div>
                     <label for="Id" class="text-info"> StudentName</label>
                     @Html.TextBoxFor(M => M.StudentName, new { @class = "form-control", @placeholder = "Id", @required = true, @id = "Id" })
                     <span asp-validation-for="StudentName" class="text-danger"></span>
